--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanna Go Out !!</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="msg">
         Would you Like to go on a Date ?
     </div>
 
     <div class="buttons">
-        <div class="yes">
-            <button>Yes</button>
-        </div>
+        <a href="yespage.html">
+            <div class="yes">
+                <button>Yes</button>
+            </div>
+        </a>
         <div class="no">
-            <button id = "no_button">No</button>
+            <button id="no_button">No</button>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
