--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="buttons">
         <a href="yespage.html">
             <div class="yes">
-                <button>Yes</button>
+                <button>Yessssss</button>
             </div>
         </a>
         <div class="no">
