--- a/yespage.html
+++ b/yespage.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="yesStyle.css">
 </head>
 <body>
-    <h1>hi, less go</h1>
+    <div class="msg">
+        Woohoo! 🎉 Looks like we're going on an adventure! Can't wait to see you! 😊
+        <br>Let's decide the time and place on the app where I have sent you this link...
+    </div>
 </body>
 </html>
